// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardTable Body should render card table body properly 1`] = `
.c3 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
}

.c1 {
  padding: 0;
  padding: 1.5rem 2.4rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  overflow: hidden;
}

.c1 .c2 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

.c0 {
  display: grid;
  grid-template-columns: 1fr 1fr;
  cursor: pointer;
  box-sizing: border-box;
  border-radius: 0.8rem;
  margin-bottom: 0.8rem;
  background-color: white;
  -webkit-transition: box-shadow 100ms ease-out;
  transition: box-shadow 100ms ease-out;
  border: 0.1rem solid #ffffff;
  box-shadow: 0 0.2rem 0.8rem rgba(176,188,200,0.2);
}

.c0:hover {
  box-shadow: 0 0.4rem 0.8rem rgba(176,188,200,0.6);
}

.c0:nth-child(odd) {
  background: #ffffff;
}

.c0:nth-child(even) {
  background: #ffffff;
}

<div>
  <table>
    <tbody>
      <tr
        class="c0"
      >
        <td
          class="c1"
        >
          <span
            class="c2 c3"
            title="Oli Bob"
          >
            Oli Bob
          </span>
        </td>
        <td
          class="c1"
        >
          <span
            class="c2 c3"
            title="Metaformin"
          >
            Metaformin
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`CardTable Body should render no result row when there is no data 1`] = `
.c2 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 700;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
}

.c0 {
  display: grid;
  grid-template-columns: 1fr 1fr;
  cursor: inherit;
  box-sizing: border-box;
  border-radius: 0.8rem;
  margin-bottom: 0.8rem;
  background-color: white;
  -webkit-transition: box-shadow 100ms ease-out;
  transition: box-shadow 100ms ease-out;
  border: 0.1rem solid #ffffff;
  box-shadow: 0 0.2rem 0.8rem rgba(176,188,200,0.2);
}

.c0:hover {
  box-shadow: 0 0.4rem 0.8rem rgba(176,188,200,0.6);
}

.c0:nth-child(odd) {
  background: #ffffff;
}

.c0:nth-child(even) {
  background: #ffffff;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 1.5rem 0;
}

<div>
  <tr
    class="c0 c1"
  >
    <strong
      class="c2"
    >
       No Result 
    </strong>
  </tr>
</div>
`;
